# GesturePicker

./: CMakeLists.txt  Functions.cpp  Functions.hpp  Makefile  Patterns.txt  Starter.cpp  Starter.h  data.cpp  data.hpp  handGesture.cpp  handGesture.hpp  libopencv_highgui.so.3.1  main.cpp  opencv
AppData/GesturePicker/Patterns/: Patterns.txt
